--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Pizzeria</string>
+    <string-array name="table">
+        <item>Déroulez moi !</item>
+        <item>Table 2 place n°1</item>
+        <item>Table 2 place n°2</item>
+        <item>Table 5 place n°3</item>
+        <item>Table 4 place n°4</item>
+        <item>Table 6 place n°5</item>
+    </string-array>
 </resources>
